<resources>
    <string name="app_name">Order</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="min_8_characters">Min. 8 Characters</string>
    <string name="name_example_etceteria_com">name@example.etceteria.com</string>
    <string name="first_name_amp_last_name"><![CDATA[First Name & Last Name]]></string>
    <string name="place_orders_from_the_comfort_of_your_device">Place orders from the comfort of your device</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone">Phone no</string>
    <string name="password_recovery_summary">Hi there, Kindly enter your email to reset your password</string>
    <string name="name">Name</string>
    <string name="create_an_account_to_place_orders_with_ease">Create an account to place orders with ease</string>
    <string name="get_started">Get Started</string>
    <string name="night_mode">Night mode</string>
    <string name="light_mode">Day mode</string>
    <string name="sign_out">Sign out</string>
    <string name="_123456789">123456789</string>
    <string name="change_profile_image_button">change profile image button</string>
    <string name="long_text">I loved the setcadfjoadfj asdofjaidsjfs dfaodjfiad aojsdijfoad asdoifajod aisodjfoaidsjfo asidfjoaid aodsjfoiajdoi asdjfoajodifj adfadjofjaidjf asodidjfoaijdfoiajsdf aosidfjoaisdfoajd faidjfoaidfnoiajd foiadjdif</string>
    <string name="submit">Submit</string>
    <string name="leave_a_feedback">Leave a feedback</string>
    <string name="rate_our_service">Rate our service</string>
    <string name="your_order_has_been_delivered_successfully">Your order has been delivered successfully</string>
    <string name="type_your_comment_here">Type your comment here</string>
    <string name="delivered">Delivered</string>
    <string name="pending">Pending</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="items_to_deliver">Items to deliver</string>
    <string name="address">Address</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="order_details">Order Details</string>
    <string name="complete_order">Complete Order</string>
    <string name="subtotal">Subtotal:</string>
    <string name="click_here_to_set_delivery_address">Click here to set delivery address</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="_continue">Continue</string>
    <string name="my_orders">My Orders</string>
    <string name="my_address">My Address</string>
    <string name="my_profile">My Profile</string>
    <string name="payment_methods">Payment methods</string>
    <string name="contact_us">Contact us</string>
    <string name="about_us">About us</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="checkout">Checkout</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chicken_and_chips">chicken and chips</string>
    <string name="pizza">pizza</string>
    <string name="shawarma">shawarma</string>
    <string name="burger">burger</string>
    <string name="back_button">Back button</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_recovery">Password Recovery</string>
</resources>