<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialogBackgroundColor"
        tools:context=".view.LoginFragment">

        <com.github.captain_miao.optroundcardview.OptRoundCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:optRoundCardCornerRadius="@dimen/_30sdp"
            app:optRoundCardLeftBottomCorner="false"
            app:optRoundCardRightBottomCorner="false">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_20sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_32sdp"
                        android:text="@string/login"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/materialTextView3"
                        app:layout_constraintStart_toStartOf="@+id/tv_email"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_32sdp"
                        android:text="@string/place_orders_from_the_comfort_of_your_device"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_email"
                        app:layout_constraintEnd_toEndOf="@+id/et_email_layout"
                        app:layout_constraintStart_toStartOf="@+id/materialTextView" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_6sdp"
                        android:text="@string/email"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/et_email_layout"
                        app:layout_constraintStart_toStartOf="@+id/et_email_layout" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_email_layout"
                        style="@style/Widgets.Order.TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_16sdp"
                        app:layout_constraintBottom_toTopOf="@id/tv_password"
                        app:layout_constraintEnd_toEndOf="@+id/et_password_layout"
                        app:layout_constraintStart_toStartOf="@+id/et_password_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            style="@style/Widget.Order.TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:ems="10"
                            android:hint="@string/name_example_etceteria_com"
                            android:inputType="textEmailAddress"
                            android:outlineProvider="none"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_15sdp"
                            app:textInputLayoutFocusedRectEnabled="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_6sdp"
                        android:text="@string/password"
                        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/et_password_layout"
                        app:layout_constraintStart_toStartOf="@+id/et_password_layout" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_password_layout"
                        style="@style/Widgets.Order.TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_16sdp"
                        app:layout_constraintBottom_toTopOf="@+id/btn_login"
                        app:layout_constraintEnd_toEndOf="@+id/btn_login"
                        app:layout_constraintStart_toStartOf="@+id/btn_login"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/Widget.Order.TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:hint="@string/min_8_characters"
                            android:inputType="textPassword"
                            android:outlineProvider="none"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_15sdp"
                            app:textInputLayoutFocusedRectEnabled="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_login"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/midWhite"
                        android:textSize="@dimen/_14ssp"
                        app:cornerRadius="@dimen/_6sdp"
                        app:layout_constraintBottom_toTopOf="@+id/materialTextView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/materialTextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_signup"
                        app:layout_constraintEnd_toStartOf="@+id/tv_signup"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_signup" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:text="@string/sign_up"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/materialTextView2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </com.github.captain_miao.optroundcardview.OptRoundCardView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>