<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/et_title_layout"
            app:layout_constraintStart_toStartOf="@+id/et_title_layout"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_title_layout"
            style="@style/Widgets.Order.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorContentDescription="*Required"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toTopOf="@+id/btn_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                style="@style/Widget.Order.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:ems="10"
                android:hint="@string/name_example_etceteria_com"
                android:inputType="textEmailAddress"
                android:outlineProvider="none"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                app:textInputLayoutFocusedRectEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_10ssp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_update"
            app:layout_constraintEnd_toStartOf="@+id/btn_update"
            app:layout_constraintTop_toTopOf="@+id/btn_update" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/update"
            android:textColor="@color/midWhite"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_title_layout" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>